<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <!-- Package name -->
  <name>chat_interface</name>
  
  <!-- Version number -->
  <version>0.0.1</version>
  
  <!-- Description of the package -->
  <description>A simple ROS 2 chat interface using publisher and subscriber nodes.</description>
  
  <!-- Maintainer details -->
  <maintainer email="dhruv.mitmpl2024@learner.manipal.edu">Dhruv</maintainer>
  
  <!-- License declaration (replace with actual license if applicable) -->
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
